--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,12 @@ jobs:
             # replacement if one is specified in the go.mod file.
             scion_mod_version=$(go list -m github.com/scionproto/scion | sed -s 's/.*\s*=>\s*//')
             scion_repo=https://${scion_mod_version% *}.git
-            # Extract the commit hash, which is the last part of the go modules version
-            scion_commit=${scion_mod_version##*-}
+            # Extract the tag or commit hash; this is the last part of the go
+            # modules version string, separated by a space from the module
+            # name; the format looks like this:
+            #   github.com/scionproto/scion v0.4.1-c0ffeeabc    # pseudo-tag followed by commit hash, or
+            #   github.com/scionproto/scion v0.5.0              # actual tag
+            scion_commit=${scion_mod_version##*[ -]}
             git clone ${scion_repo} ~/scion
             cd ~/scion
             git checkout --quiet ${scion_commit}
