--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,15 +70,10 @@ jobs:
             cd ~/scion
             export PYTHONPATH=python/:.
 
-            # Generate Tiny.topo
+            # Generate tiny.topo
             printf '#!/bin/bash\necho "0.0.0.0"' > tools/docker-ip # Some hackery to make topo scripts run
             python3 python/topology/generator.py -c ./topology/tiny.topo
-            # Generate gen-certs
-            mkdir gen-certs gen-cache
-            openssl genrsa -out "gen-certs/tls.key" 2048
-            openssl req -new -x509 -key "gen-certs/tls.key" -out "gen-certs/tls.pem" -days 3650 -subj /CN=scion_def_srv
-
-            sudo mkdir /run/shm -m 777
+            mkdir gen-cache
 
             # Start one AS only (1-ff00:0:110 is referenced explicitly from the integration tests)
             # XXX(matzf): explicitly start services but not the routers (which are not needed here) -- routers require to set some IPv6 addresses and this does not seem to work here
