Install new go version for integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,38 +8,34 @@ jobs:
           name: Go version
           command: |
             go version
-      - run:
-          name: Install libpam0g-dev
-          command:
-            sudo apt-get update && sudo apt-get install -y libpam0g-dev
       - checkout
       - restore_cache:
           keys:
             - v3-pkg-cache-{{ checksum "go.sum" }}
             - v3-pkg-cache
       - run:
-          name: Build
-          command: make build
-      - run:
-          name: Run Linters
+          name: Lint
           command: |
-            make setup_lint
-            make lint
+            make vet
       - run:
-          name: Run unit tests
-          command: make test
+          name: Build
+          command: |
+            make all
+      - run:
+          name: Unit tests
+          command: |
+            make unit
       - save_cache:
           key: v3-pkg-cache-{{ checksum "go.sum" }}
           paths:
-            - "~/go/pkg"
-            - "~/.cache/go-build"
+            - "/go/pkg"
 
   integration:
     machine:
       image: ubuntu-2004:202111-02 # using go1.17.3
+
     steps:
       - checkout
-      # The following step are shared with netsec-ethz/rains
       - run:
           name: Checkout SCION
           command: |
@@ -47,16 +43,20 @@ jobs:
             # replacement if one is specified in the go.mod file.
             scion_mod_version=$(go list -m github.com/scionproto/scion | sed -s 's/.*\s*=>\s*//')
             scion_repo=https://${scion_mod_version% *}.git
-            # Extract the commit hash, which is the last part of the go modules version
+            # Extract the tag or commit hash; this is the last part of the go
+            # modules version string, separated by a space from the module
+            # name; the format looks like this:
+            #   github.com/scionproto/scion v0.4.1-c0ffeeabc    # pseudo-tag followed by commit hash, or
+            #   github.com/scionproto/scion v0.5.0              # actual tag
             scion_commit=${scion_mod_version##*[ -]}
             git clone ${scion_repo} ~/scion
             cd ~/scion
             git checkout --quiet ${scion_commit}
       - restore_cache:
           keys:
-            - v2-integration-pkg-cache-{{ checksum "~/scion/go.sum" }}-{{ checksum "go.sum" }}
-            - v2-integration-pkg-cache-{{ checksum "~/scion/go.sum" }}-
-            - v2-integration-pkg-cache-
+            - v1-pkg-cache-{{ checksum "~/scion/go.sum" }}-{{ checksum "go.sum" }}
+            - v1-pkg-cache-{{ checksum "~/scion/go.sum" }}-
+            - v1-pkg-cache-
       - run:
           name: Build SCION services and install python3 dependencies
           command: |
@@ -65,7 +65,7 @@ jobs:
             python3 --version
 
             cd ~/scion
-            for service in "posix-router" "cs" "dispatcher" "scion-pki" "daemon" "co"; do
+            for service in "posix-router" "cs" "dispatcher" "scion-pki" "daemon"; do
               go build -o ./bin/ ./go/${service}/ && echo "Built ${service}";
             done
 
@@ -77,22 +77,18 @@ jobs:
             cd ~/scion
             export PYTHONPATH=python/:.
 
-            # Generate tiny4.topo
+            # Generate tiny.topo
             printf '#!/bin/bash\necho "0.0.0.0"' > tools/docker-ip # Some hackery to make topo scripts run
-            # Use IPv4 addresses for this test
             python3 python/topology/generator.py -c ./topology/tiny4.topo
-            # Link the gen directory containing sciond_addresses.json and as_list.json
-            ln -s ~/scion/gen /home/circleci/project/gen
             mkdir gen-cache
 
-            # Start all AS tiny4.topo
+            # Start one AS only (1-ff00:0:110 is referenced explicitly from the integration tests)
             supervisor/supervisor.sh reload
-            supervisor/supervisor.sh start all
-      - run:
-          name: Install libpam0g-dev
-          command:
-            sudo apt-get update && sudo apt-get install -y libpam0g-dev
-      # Use different Go version to build scion-apps
+            supervisor/supervisor.sh start \
+              dispatcher \
+              as1-ff00_0_110:cs1-ff00_0_110-1 \
+              as1-ff00_0_110:sd1-ff00_0_110
+       # Use different Go version to build scion-apps
       - run:
           name: Install Go 1.20.7 to build scion-apps
           command: |
@@ -102,14 +98,12 @@ jobs:
       - run:
           name: Integration tests
           command: |
+            export SCION_DAEMON_ADDRESS="127.0.0.12:30255"
             make integration
-      - store_artifacts:
-          path: /tmp/scion-apps-integration/
       - save_cache:
-          key: v2-integration-pkg-cache-{{ checksum "~/scion/go.sum" }}-{{ checksum "go.sum" }}
+          key: v1-pkg-cache-{{ checksum "~/scion/go.sum" }}-{{ checksum "go.sum" }}
           paths:
-            - "~/.go_workspace/"
-            - "~/.cache/go-build/"
+            - "/go/pkg"
 
 workflows:
   version: 2
