--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,8 @@ jobs:
             #   github.com/scionproto/scion v0.4.1-c0ffeeabc    # pseudo-tag followed by commit hash, or
             #   github.com/scionproto/scion v0.5.0              # actual tag
             # Was previously scion_commit=${scion_mod_version##*[ -]}
-            # Having the newest commit would lead to a lot of upgrades below
+            # Having the newest scion commit would lead to a lot of upgrades below
+            # So we pin it to an older version that matches the integration tests
             # It should not matter if we build SCION binaries with different version than the apps
             # as long as there are no major breaks
             scion_commit=5883c725f748 # v0.6.1-0.20220202161514-5883c725f748
@@ -94,11 +95,11 @@ jobs:
               as1-ff00_0_110:sd1-ff00_0_110
        # Use different Go version to build scion-apps
       - run:
-          name: Install Go 1.21.0 to build scion-apps
+          name: Install Go 1.21.3 to build scion-apps
           command: |
-            wget https://go.dev/dl/go1.21.0.linux-amd64.tar.gz
+            wget https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
             sudo rm -rf /usr/local/go
-            sudo tar -C /usr/local -xzf go1.21.0.linux-amd64.tar.gz
+            sudo tar -C /usr/local -xzf go1.21.3.linux-amd64.tar.gz
       - run:
           name: Integration tests
           command: |
