--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/go:1.17
+      - image: cimg/go:1.21
     steps:
       - run:
           name: Go version
@@ -48,7 +48,12 @@ jobs:
             # name; the format looks like this:
             #   github.com/scionproto/scion v0.4.1-c0ffeeabc    # pseudo-tag followed by commit hash, or
             #   github.com/scionproto/scion v0.5.0              # actual tag
-            scion_commit=${scion_mod_version##*[ -]}
+            # Was previously scion_commit=${scion_mod_version##*[ -]}
+            # Having the newest scion commit would lead to a lot of upgrades below
+            # So we pin it to an older version that matches the integration tests
+            # It should not matter if we build SCION binaries with different version than the apps
+            # as long as there are no major breaks
+            scion_commit=5883c725f748 # Previously: v0.6.1-0.20220202161514-5883c725f748; Now: v0.8.1-0.20231010074308-1774cbfccb4c
             git clone ${scion_repo} ~/scion
             cd ~/scion
             git checkout --quiet ${scion_commit}
@@ -88,6 +93,13 @@ jobs:
               dispatcher \
               as1-ff00_0_110:cs1-ff00_0_110-1 \
               as1-ff00_0_110:sd1-ff00_0_110
+       # Use different Go version to build scion-apps
+      - run:
+          name: Install Go 1.21.3 to build scion-apps
+          command: |
+            wget https://go.dev/dl/go1.21.3.linux-amd64.tar.gz
+            sudo rm -rf /usr/local/go
+            sudo tar -C /usr/local -xzf go1.21.3.linux-amd64.tar.gz
       - run:
           name: Integration tests
           command: |
